split out persistence and added docker volume to dev

--- a/templates/data_table.html
+++ b/templates/data_table.html
@@ -3,7 +3,7 @@
         <td><p>Your ip is the following: </p></td><td><b>{{ip}}</b></td>
     </tr>
     <tr>
-        <td><p>You are the nth distinct visitor since I last restarted this container: </p></td><td><b>{{visitor_rank}}</b></td>
+        <td><p>You are the nth distinct visitor since I accidentally deleted the DB: </p></td><td><b>{{visitor_rank}}</b></td>
     </tr>
     <tr>
         <td><p>Last restart date: </p></td><td><b>{{last_start_time}}</b></td>
