change to db init time instead of container uptime

--- a/templates/data_table.html
+++ b/templates/data_table.html
@@ -6,7 +6,7 @@
         <td><p>You are the nth distinct visitor since I accidentally deleted the DB: </p></td><td><b>{{visitor_rank}}</b></td>
     </tr>
     <tr>
-        <td><p>Last restart date: </p></td><td><b>{{last_start_time}}</b></td>
+        <td><p>DB initialization date (UTC): </p></td><td><b>{{db_init_time}}</b></td>
     </tr>
     <tr>
         <td><p>Total number of visitors: </p></td><td><b>{{total_visitors}}</b></td>
