--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Ha you fool!</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     <body>
         <table class="page-bg" cellspacing="0" >
