change method for hiding ip

--- a/templates/data_table.html
+++ b/templates/data_table.html
@@ -34,8 +34,7 @@
         }
 
         .hide {
-            color: black;
-            background: black;
+            display: none;
         }
 
         .show-ip-button {
