add silly website links

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,11 @@
                         <li><a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-messagebox">List of dog breeds</a></li>
                         <li><a href="https://www.twitch.tv/pinguefy">LiveLeak</a></li>
                         <li><a href="https://typescripts.org/">C progaming language book pdf</a></li>
+                        <li><a href="https://chat.openai.com/">Microsoft tech support</a></li>
+                        <li><a href="https://www.freebsd.org/where/">Linux man pages</a></li>
+                        <li><a href="http://www.windows93.net/">Linux man pages (backup)</a></li>
+                        <li><a href="https://discord.gg">Betterhelp online therapy</a></li>
+                        <li><a href="https://www.scientology.ca/">Surfshark VPN</a></li>
                     </ul>
                 </td>
 
