add silly bookmarks

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,18 +14,27 @@
                     <h3 style="text-align: center; margin: 10px;">Here are some awesome websites</h3>
                     <hr />
                     <ul style="text-align: left; padding-left: 17px;" >
-                        <li><a href="https://amogousse.com">Personal news website</a></li>
-                        <li><a href="https://definitelynotaniplogger.com">Wikipedia page on recursion</a></li>
-                        <li><a href="https://maps.app.goo.gl/hKe5P43cBVjP8iE6A">Live camera feed of your house</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Donald_Trump">Johnny Test fanfic page</a></li>
-                        <li><a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-messagebox">List of dog breeds</a></li>
-                        <li><a href="https://www.twitch.tv/pinguefy">LiveLeak</a></li>
+                        <!--sort -k 3,3 -t \> -->
+                        <li><a href="https://data.commoncrawl.org/crawl-data/CC-MAIN-2024-33/index.html">Archive of your mother</a></li>
+                        <li><a href="https://discord.gg">Betterhelp online therapy</a></li>
+                        <li><a href="https://killedbymicrosoft.info/">Billy gates fan club</a></li>
                         <li><a href="https://typescripts.org/">C progaming language book pdf</a></li>
-                        <li><a href="https://chat.openai.com/">Microsoft tech support</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Donald_Trump">Johnny Test fanfic page</a></li>
                         <li><a href="https://www.freebsd.org/where/">Linux man pages</a></li>
                         <li><a href="http://www.windows93.net/">Linux man pages (backup)</a></li>
-                        <li><a href="https://discord.gg">Betterhelp online therapy</a></li>
+                        <li><a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-messagebox">List of dog breeds</a></li>
+                        <li><a href="https://maps.app.goo.gl/hKe5P43cBVjP8iE6A">Live camera feed of your house</a></li>
+                        <li><a href="https://www.twitch.tv/pinguefy">LiveLeak</a></li>
+                        <li><a href="https://www.w3schools.com/">MDN</a></li>
+                        <li><a href="https://chat.openai.com/">Microsoft tech support</a></li>
+                        <li><a href="https://amogousse.com">Personal news website</a></li>
+                        <li><a href="https://github.com/awesome-selfhosted/awesome-selfhosted">Proprietary garbage</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Ted_Kaczynski">Silly prankster</a></li>
+                        <li><a href="https://tidal.com/">SoulSeek</a></li>
                         <li><a href="https://www.scientology.ca/">Surfshark VPN</a></li>
+                        <li><a href="https://store.steampowered.com/app/881100/Noita/">Terraria</a></li>
+                        <li><a href="https://definitelynotaniplogger.com">Wikipedia page on recursion</a></li>
+                        <li><a href="https://github.com/massgravel/Microsoft-Activation-Scripts">Windows Store</a></li>
                     </ul>
                 </td>
 
