update bot count text

--- a/templates/data_table.html
+++ b/templates/data_table.html
@@ -16,7 +16,7 @@
         <td><p>Total number of visitors: </p></td><td><b>{{total_visitors}}</b></td>
     </tr>
     <tr>
-        <td><p>Number of detected bots: </p></td><td><b>{{total_bots}}</b></td>
+        <td><p>Number of detected bots: </p></td><td><b>Around {{total_bots}}</b></td>
     </tr>
     <tr>
         <td><p>Are you detected as a bot?: </p></td>
