add basic "chatbot"

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,9 @@
                         <p>And in the meantime, drive safely, have fun and take down prod</p>
                     </section>
                 </td>
-                <td style="width:20vw;"></td>
+                <td style="width:20vw;">
+                    {{{chat_bot}}}
+                </td>
             </tr>
         </table>
     </body>
