--- a/templates/chat_bot.html
+++ b/templates/chat_bot.html
@@ -48,11 +48,14 @@
 
 <script>
 
-const generic_rejection_message = "I'm sorry, but I can't assist with that request. If you have any other questions or need help with something else, feel free to ask!";
+const rejection_messages = [
+    "I'm sorry, but I can't assist with that request. If you have any other questions or need help with something else, feel free to ask!",
+    "I’m unable to help with that request. If there's anything else you need or if you have other questions, just let me know!",
+    "I can’t fulfill that request. If you have any other questions or need assistance with something else, I’m here to help!",
+    "I’m unable to assist with that request as it falls outside of the guidelines I follow. If you have any other questions or need help with a different topic, please let me know and I'll do my best to provide the information you’re looking for."
+]
 
-// I’m unable to help with that request. If there's anything else you need or if you have other questions, just let me know!
-// I can’t fulfill that request. If you have any other questions or need assistance with something else, I’m here to help!
-// I’m unable to assist with that request as it falls outside of the guidelines I follow. If you have any other questions or need help with a different topic, please let me know and I'll do my best to provide the information you’re looking for.
+let rejection_index = 0;
 
 function create_message(content, is_user) {
     const tr = document.createElement("tr");
@@ -76,7 +79,12 @@ function handle_chatbot_submit(e) {
 
     // respond in 3s
     setTimeout(()=>{
-        history.append(create_message(generic_rejection_message, false));
+        history.append(
+            create_message(
+                rejection_messages[rejection_index++ % rejection_messages.length],
+                false
+            )
+        );
         input_field.value = "";
         input_field.disabled = false;
 
